--- a/categorySingle.html
+++ b/categorySingle.html
@@ -283,6 +283,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -305,6 +307,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -327,6 +331,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -349,6 +355,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -371,6 +379,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -393,6 +403,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -415,6 +427,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -437,6 +451,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -459,6 +475,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -481,6 +499,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -503,6 +523,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -525,6 +547,8 @@
                     <a
                       role="button"
                       class="gallery-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#gallery1"
                     >
                       <div class="gallery-statistics">
                         <span>
@@ -577,6 +601,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -599,6 +625,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -621,6 +649,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -643,6 +673,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -665,6 +697,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -687,6 +721,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -709,6 +745,8 @@
                     <a
                       role="button"
                       class="video-item loading-img lazy-img-parent"
+                      data-bs-toggle="modal"
+                      data-bs-target="#videos1"
                     >
                       <div class="video-statistics">
                         <span>
@@ -1054,6 +1092,65 @@
       </div>
     </footer>
     <!-- End Footer -->
+
+    <!-- Start Gallery Modal -->
+    <div class="modal fade" id="gallery1" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">gallery</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Gallery Modal -->
+
+    <!-- Start Videos Modal -->
+    <div class="modal fade" id="videos1" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">videos</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Videos Modal -->
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
