--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
                   </span>
                 </div>
                 <a href="categorySingle.html" class="news-category">
-                  قطاع  النقل والمواصلات
+                  قطاع النقل والمواصلات
                 </a>
                 <h6 class="news-name">
                   <a href="blogPost.html">
@@ -752,6 +752,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -774,6 +776,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -796,6 +800,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -818,6 +824,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -840,6 +848,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -862,6 +872,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -884,6 +896,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -906,6 +920,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -928,6 +944,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -950,6 +968,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -972,6 +992,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -994,6 +1016,8 @@
                   <a
                     role="button"
                     class="gallery-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal"
+                    data-bs-target="#gallery1"
                   >
                     <div class="gallery-statistics">
                       <span>
@@ -1051,6 +1075,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1073,6 +1098,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1095,6 +1121,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1117,6 +1144,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1139,6 +1167,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1161,6 +1190,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1183,6 +1213,7 @@
                   <a
                     role="button"
                     class="video-item loading-img lazy-img-parent"
+                    data-bs-toggle="modal" data-bs-target="#videos1"
                   >
                     <div class="video-statistics">
                       <span>
@@ -1428,6 +1459,64 @@
       </div>
     </footer>
     <!-- End Footer -->
+
+    <!-- Start Gallery Modal -->
+    <div class="modal fade" id="gallery1" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">gallery</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Gallery Modal -->
+
+    <!-- Start Videos Modal -->
+    <div class="modal fade" id="videos1" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">videos</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Videos Modal -->
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
