--- a/en/index.html
+++ b/en/index.html
@@ -90,20 +90,52 @@
                     </a>
                     <ul class="nav-sublist">
                       <li>
-                        <a href="about.html">نبذة عن شركة الخمري</a>
+                        <a href="about.html">نبذة عن الخمري</a>
                       </li>
                       <li>
                         <a href="certificates.html">الشهادات والدروع</a>
                       </li>
                     </ul>
                   </li>
-                  <li class="list-item">
+                  <li class="list-item has-children">
                     <a href="categoriesList.html" class="list-link">
                       قطاعات الخمري
+                      <i class="arrow">
+                        <img src="../images/icons/navArr.svg" class="svg" />
+                      </i>
                     </a>
+                    <ul class="nav-sublist">
+                      <li>
+                        <a href="categorySingle.html">قطاع الحج والعمرة</a>
+                      </li>
+                      <li>
+                        <a href="categorySingle.html"
+                          >قطاع نقل الحجاج والمعتمرين</a
+                        >
+                      </li>
+                      <li>
+                        <a href="categorySingle.html">فندق سويس انترناشونال</a>
+                      </li>
+                    </ul>
                   </li>
-                  <li class="list-item">
-                    <a href="servicesList.html" class="list-link"> خدماتنا </a>
+                  <li class="list-item has-children">
+                    <a href="servicesList.html" class="list-link">
+                      خدماتنا
+                      <i class="arrow">
+                        <img src="../images/icons/navArr.svg" class="svg" />
+                      </i>
+                    </a>
+                    <ul class="nav-sublist">
+                      <li>
+                        <a href="serviceSingle.html">خدمات الحج والعمرة</a>
+                      </li>
+                      <li>
+                        <a href="serviceSingle.html"> خدمات النقل والموصلات </a>
+                      </li>
+                      <li>
+                        <a href="serviceSingle.html">خدمات فندقية</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class="list-item">
                     <a href="blogList.html" class="list-link"> أخبارنا </a>
@@ -302,7 +334,10 @@
             data-sal="zoom-in"
           >
             <img data-src="../images/about/1.jpg" class="about-img lazy-img" />
-            <img data-src="../images/about/logo.png" class="about-logo lazy-img" />
+            <img
+              data-src="../images/about/logo.png"
+              class="about-logo lazy-img"
+            />
           </div>
         </div>
       </div>
@@ -608,7 +643,10 @@
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/1.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/1.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -634,7 +672,10 @@
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/2.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/2.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -662,7 +703,10 @@
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/3.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/3.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -691,7 +735,10 @@
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="../images/news/4.jpg" class="img-fluid lazy-img" />
+                <img
+                  data-src="../images/news/4.jpg"
+                  class="img-fluid lazy-img"
+                />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
