--- a/servicesList.html
+++ b/servicesList.html
@@ -90,20 +90,54 @@
                     </a>
                     <ul class="nav-sublist">
                       <li>
-                        <a href="about.html">نبذة عن شركة الخمري</a>
+                        <a href="about.html">نبذة عن الخمري</a>
                       </li>
                       <li>
                         <a href="certificates.html">الشهادات والدروع</a>
                       </li>
                     </ul>
                   </li>
-                  <li class="list-item">
+                  <li class="list-item has-children">
                     <a href="categoriesList.html" class="list-link">
                       قطاعات الخمري
+                      <i class="arrow">
+                        <img src="images/icons/navArr.svg" class="svg" />
+                      </i>
                     </a>
+                    <ul class="nav-sublist">
+                      <li>
+                        <a href="categorySingle.html">قطاع الحج والعمرة</a>
+                      </li>
+                      <li>
+                        <a href="categorySingle.html"
+                          >قطاع نقل الحجاج والمعتمرين</a
+                        >
+                      </li>
+                      <li>
+                        <a href="categorySingle.html">فندق سويس انترناشونال</a>
+                      </li>
+                    </ul>
                   </li>
-                  <li class="list-item">
-                    <a href="servicesList.html" class="list-link"> خدماتنا </a>
+                  <li class="list-item has-children">
+                    <a href="servicesList.html" class="list-link">
+                      خدماتنا
+                      <i class="arrow">
+                        <img src="images/icons/navArr.svg" class="svg" />
+                      </i>
+                    </a>
+                    <ul class="nav-sublist">
+                      <li>
+                        <a href="serviceSingle.html">خدمات الحج والعمرة</a>
+                      </li>
+                      <li>
+                        <a href="serviceSingle.html">
+                          خدمات النقل والموصلات
+                        </a>
+                      </li>
+                      <li>
+                        <a href="serviceSingle.html">خدمات فندقية</a>
+                      </li>
+                    </ul>
                   </li>
                   <li class="list-item">
                     <a href="blogList.html" class="list-link"> أخبارنا </a>
