--- a/categoriesList.html
+++ b/categoriesList.html
@@ -130,9 +130,7 @@
                         <a href="serviceSingle.html">خدمات الحج والعمرة</a>
                       </li>
                       <li>
-                        <a href="serviceSingle.html">
-                          خدمات النقل والموصلات
-                        </a>
+                        <a href="serviceSingle.html"> خدمات النقل والموصلات </a>
                       </li>
                       <li>
                         <a href="serviceSingle.html">خدمات فندقية</a>
@@ -253,55 +251,54 @@
               </p>
             </div>
             <div class="categories-list">
-              <div class="category-item">
-                <a
-                  href="categorySingle.html"
-                  class="category-img loading-img lazy-img-parent"
-                >
+              <a href="categorySingle.html" class="category-item">
+                <div class="category-img loading-img lazy-img-parent">
                   <img data-src="images/categories/1.png" class="lazy-img" />
-                </a>
+                </div>
                 <h3 class="category-name">
-                  <a href="categorySingle.html"> الخمري لخدمات الحج والعمرة </a>
+                  <span> الخمري لخدمات الحج والعمرة </span>
                 </h3>
                 <p class="category-summary">
                   الشركة تقدم خدمات للحجاج والمعتمرين، وتسهم في تسهيل أداء مناسك
                   الحج والعمرة
                 </p>
-              </div>
-              <div class="category-item">
-                <a
-                  href="categorySingle.html"
-                  class="category-img loading-img lazy-img-parent"
-                >
+                <span class="category-more">
+                  تفاصيل أكثر
+                  <img src="images/icons/moreH.svg" class="svg" />
+                </span>
+              </a>
+              <a href="categorySingle.html" class="category-item">
+                <div class="category-img loading-img lazy-img-parent">
                   <img data-src="images/categories/2.png" class="lazy-img" />
-                </a>
+                </div>
                 <h3 class="category-name">
-                  <a href="categorySingle.html">
-                    الخمري لخدمات نقل المعتمرين
-                  </a>
+                  <span> الخمري لخدمات نقل المعتمرين </span>
                 </h3>
                 <p class="category-summary">
                   من خلال شركة الخمري، يمكن الوصول إلى خدمات النقل داخل المملكة
                   العربية السعودية
                 </p>
-              </div>
-              <div class="category-item">
-                <a
-                  href="categorySingle.html"
-                  class="category-img loading-img lazy-img-parent"
-                >
+                <span class="category-more">
+                  تفاصيل أكثر
+                  <img src="images/icons/moreH.svg" class="svg" />
+                </span>
+              </a>
+              <a href="categorySingle.html" class="category-item">
+                <div class="category-img loading-img lazy-img-parent">
                   <img data-src="images/categories/3.png" class="lazy-img" />
-                </a>
+                </div>
                 <h3 class="category-name">
-                  <a href="categorySingle.html">
-                    فندق سويس انترناشونال طابا السلام
-                  </a>
+                  <span> فندق سويس انترناشونال طابا السلام </span>
                 </h3>
                 <p class="category-summary">
                   تعمل شركة الخمري في مجال الفنادق والمنتجعات، وتسعى دائماً
                   لتقديم أعلى مستوى من الخدمة لضيوفها
                 </p>
-              </div>
+                <span class="category-more">
+                  تفاصيل أكثر
+                  <img src="images/icons/moreH.svg" class="svg" />
+                </span>
+              </a>
             </div>
           </div>
         </div>
