--- a/categorySingle.html
+++ b/categorySingle.html
@@ -130,9 +130,7 @@
                         <a href="serviceSingle.html">خدمات الحج والعمرة</a>
                       </li>
                       <li>
-                        <a href="serviceSingle.html">
-                          خدمات النقل والموصلات
-                        </a>
+                        <a href="serviceSingle.html"> خدمات النقل والموصلات </a>
                       </li>
                       <li>
                         <a href="serviceSingle.html">خدمات فندقية</a>
@@ -966,40 +964,46 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <div class="category-item">
-                    <a
-                      href="categorySingle.html"
-                      class="category-img loading-img lazy-img-parent"
-                    >
+                  <a href="categorySingle.html" class="category-item">
+                    <div class="category-img loading-img lazy-img-parent">
                       <img
                         data-src="images/categories/2.png"
                         class="lazy-img"
                       />
-                    </a>
+                    </div>
                     <h3 class="category-name">
-                      <a href="categorySingle.html">
-                        الخمري لخدمات نقل المعتمرين
-                      </a>
+                      <span> الخمري لخدمات نقل المعتمرين </span>
                     </h3>
-                  </div>
+                    <p class="category-summary">
+                      من خلال شركة الخمري، يمكن الوصول إلى خدمات النقل داخل
+                      المملكة العربية السعودية
+                    </p>
+                    <span class="category-more">
+                      تفاصيل أكثر
+                      <img src="images/icons/moreH.svg" class="svg" />
+                    </span>
+                  </a>
                 </div>
                 <div class="swiper-slide">
-                  <div class="category-item">
-                    <a
-                      href="categorySingle.html"
-                      class="category-img loading-img lazy-img-parent"
-                    >
+                  <a href="categorySingle.html" class="category-item">
+                    <div class="category-img loading-img lazy-img-parent">
                       <img
                         data-src="images/categories/3.png"
                         class="lazy-img"
                       />
-                    </a>
+                    </div>
                     <h3 class="category-name">
-                      <a href="categorySingle.html">
-                        فندق سويس انترناشونال طابا السلام
-                      </a>
+                      <span> فندق سويس انترناشونال طابا السلام </span>
                     </h3>
-                  </div>
+                    <p class="category-summary">
+                      تعمل شركة الخمري في مجال الفنادق والمنتجعات، وتسعى دائماً
+                      لتقديم أعلى مستوى من الخدمة لضيوفها
+                    </p>
+                    <span class="category-more">
+                      تفاصيل أكثر
+                      <img src="images/icons/moreH.svg" class="svg" />
+                    </span>
+                  </a>
                 </div>
               </div>
             </div>
