about features hover

--- a/about.html
+++ b/about.html
@@ -332,7 +332,7 @@
             <div class="features-list">
               <div class="feature-item">
                 <div class="feature-icon">
-                  <img src="images/features/1.svg" />
+                  <img src="images/features/1.svg" class="svg" />
                 </div>
                 <h3 class="feature-title">شعار الشركة</h3>
                 <p class="feature-description">
@@ -342,7 +342,7 @@
               </div>
               <div class="feature-item">
                 <div class="feature-icon">
-                  <img src="images/features/2.svg" />
+                  <img src="images/features/2.svg" class="svg" />
                 </div>
                 <h3 class="feature-title">أهداف الشركة</h3>
                 <p class="feature-description">
@@ -353,7 +353,7 @@
               </div>
               <div class="feature-item">
                 <div class="feature-icon">
-                  <img src="images/features/3.svg" />
+                  <img src="images/features/3.svg" class="svg" />
                 </div>
                 <h3 class="feature-title">رؤية الشركة</h3>
                 <p class="feature-description">
