--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
   </head>
 
   <body>
+    <div class="preloader">
+      <div class="preloader-flex">
+        <div class="preloader-logo-cont">
+          <div class="colored">
+            <img src="images/logo.png" class="img-fluid" />
+          </div>
+          <div class="filterd">
+            <img src="images/logo.png" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Start Header -->
     <header>
       <div class="container">
@@ -1503,7 +1515,6 @@
       </div>
     </footer>
     <!-- End Footer -->
-
 
     <!-- Start Gallery Modal -->
     <div class="modal fade" id="gallery1" tabindex="-1" aria-hidden="true">
