--- a/servicesList.html
+++ b/servicesList.html
@@ -168,7 +168,7 @@
                         <img src="images/lang/ar.svg" class="flag" />
                         <span class="text"> العربية </span>
                         <i class="arrow">
-                          <img src="images/icons/langArr.svg" class="svg" />
+                          <img src="images/icons/navArr.svg" class="svg" />
                         </i>
                       </a>
                       <div class="lang-list">
