--- a/contact.html
+++ b/contact.html
@@ -238,7 +238,7 @@
     <div class="page-content contact-page">
       <div
         class="contactForm-section"
-        style="background-image: url(images/background/bg2.png)"
+        style="background-image: url(images/background/contactPage.jpg)"
       >
         <div class="container">
           <div class="contactForm-content">
