--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
 
       <section
         class="features-section"
-        style="background-image: url(images/background/bg2.png)"
+        style="background-image: url(images/background/features.png)"
       >
         <div class="container">
           <div class="statistics-list">
