--- a/blogList.html
+++ b/blogList.html
@@ -243,15 +243,15 @@
             <div class="filter-content">
               <label class="filter-label"> فلتر ب </label>
               <select class="filter-select">
-                <option value="1">جميع القطاعات</option>
-                <option value="2">الخمري لخدمات الحج والعمرة</option>
-                <option value="3">الخمري لخدمات نقل المعتمرين</option>
-                <option value="4">فندق سويس انترناشونال طابا السلام</option>
+                <option value="all">جميع القطاعات</option>
+                <option value="cat1">الخمري لخدمات الحج والعمرة</option>
+                <option value="cat2">الخمري لخدمات نقل المعتمرين</option>
+                <option value="cat3">فندق سويس انترناشونال طابا السلام</option>
               </select>
             </div>
           </div>
           <div class="news-row">
-            <div class="news-item">
+            <div class="news-item" data-cat="cat1">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -277,7 +277,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat2">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -296,7 +296,7 @@
                   </span>
                 </div>
                 <a href="categorySingle.html" class="news-category">
-                  قطاع الحج والعمرة
+                  قطاع النقل والمواصلات
                 </a>
                 <h6 class="news-name">
                   <a href="blogPost.html">
@@ -305,7 +305,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat3">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -324,7 +324,7 @@
                   </span>
                 </div>
                 <a href="categorySingle.html" class="news-category">
-                  قطاع النقل والمواصلات
+                  فندق سويس انترناشونال طابا السلام
                 </a>
                 <h6 class="news-name">
                   <a href="blogPost.html">
@@ -334,7 +334,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat3">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -363,7 +363,33 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat2">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/1.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع النقل والمواصلات
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html"> إستعدادات تامة لموسم حج 1445ه </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat1">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -391,12 +417,41 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat2">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
               >
-                <img data-src="images/news/1.jpg" class="img-fluid lazy-img" />
+                <img data-src="images/news/3.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع النقل والمواصلات
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat1">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/4.jpg" class="img-fluid lazy-img" />
               </a>
               <div class="news-summary">
                 <div class="news-numbers">
@@ -413,7 +468,39 @@
                   قطاع الحج والعمرة
                 </a>
                 <h6 class="news-name">
-                  <a href="blogPost.html"> إستعدادات تامة لموسم حج 1445ه </a>
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat3">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/4.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  فندق سويس انترناشونال طابا السلام
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
                 </h6>
               </div>
             </div>
