--- a/index.html
+++ b/index.html
@@ -647,15 +647,15 @@
             <div class="filter-content">
               <label class="filter-label"> فلتر ب </label>
               <select class="filter-select">
-                <option value="1">جميع القطاعات</option>
-                <option value="2">الخمري لخدمات الحج والعمرة</option>
-                <option value="3">الخمري لخدمات نقل المعتمرين</option>
-                <option value="4">فندق سويس انترناشونال طابا السلام</option>
+                <option value="all">جميع القطاعات</option>
+                <option value="cat1">الخمري لخدمات الحج والعمرة</option>
+                <option value="cat2">الخمري لخدمات نقل المعتمرين</option>
+                <option value="cat3">فندق سويس انترناشونال طابا السلام</option>
               </select>
             </div>
           </div>
           <div class="news-grid">
-            <div class="news-item">
+            <div class="news-item" data-cat="cat1">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -681,7 +681,119 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat2">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/2.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع النقل والمواصلات
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة المنورة
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat3">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/3.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  فندق سويس انترناشونال طابا السلام
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat3">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/4.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  فندق سويس انترناشونال طابا السلام
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat2" style="display: none;">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/1.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع النقل والمواصلات
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html"> إستعدادات تامة لموسم حج 1445ه </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat1" style="display: none;">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -709,7 +821,7 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item" data-cat="cat2" style="display: none;">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -738,7 +850,36 @@
                 </h6>
               </div>
             </div>
-            <div class="news-item">
+            <div class="news-item"data-cat="cat1" style="display: none;">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/4.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع الحج والعمرة
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item"data-cat="cat3" style="display: none;">
               <a
                 href="blogPost.html"
                 class="news-img loading-img lazy-img-parent"
@@ -763,6 +904,91 @@
                   <a href="blogPost.html">
                     صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
                     تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat3" style="display: none;">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/4.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  فندق سويس انترناشونال طابا السلام
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    صاحب السمو الملكي الامير سعود بن خالد الفيصل يستضيف جمعية
+                    تدبير
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat2" style="display: none;">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/2.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع النقل والمواصلات
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة المنورة
+                  </a>
+                </h6>
+              </div>
+            </div>
+            <div class="news-item" data-cat="cat1" style="display: none;">
+              <a
+                href="blogPost.html"
+                class="news-img loading-img lazy-img-parent"
+              >
+                <img data-src="images/news/2.jpg" class="img-fluid lazy-img" />
+              </a>
+              <div class="news-summary">
+                <div class="news-numbers">
+                  <span class="number">
+                    <img src="images/icons/calender.svg" />
+                    25 آكتوبر 2023
+                  </span>
+                  <span class="number">
+                    <img src="images/icons/eye.svg" />
+                    2,545
+                  </span>
+                </div>
+                <a href="categorySingle.html" class="news-category">
+                  قطاع الحج والعمرة
+                </a>
+                <h6 class="news-name">
+                  <a href="blogPost.html">
+                    فندق السعفة شريك لجمعية تدبير لحفظ النعمة في المدينة المنورة
                   </a>
                 </h6>
               </div>
